--- a/1nen/06_tashizan1/011_1nen_find_10.html
+++ b/1nen/06_tashizan1/011_1nen_find_10.html
@@ -251,7 +251,7 @@
         const KEY_BEST = `${config.appId}:bestTime`;
         const KEY_HISTORY = `${config.appId}:history`;
         const KEY_CLEAR = `${config.appId}:clearCount`;
-        const KEY_RANK = `${config.appId}:rank`;
+        const KEY_RANK = `${config.appId}:status`;
         const KEY_DAILY_PREFIX = `${config.appId}:dailyClear-`;
 
         const startView = document.getElementById('start-view');
