--- a/3nen/16_programming/53_wakuwaku_programming.html
+++ b/3nen/16_programming/53_wakuwaku_programming.html
@@ -148,6 +148,7 @@
     </div>
 
     <script>
+        // page: 53
         /* ==========================================
            0. 設定
            ========================================== */
