--- a/3nen/19_kakezan_hissan2/34_81_all_random.html
+++ b/3nen/19_kakezan_hissan2/34_81_all_random.html
@@ -473,14 +473,14 @@
             { q: "9 × 5", a: 45, q_read: "くご",     a_read: "しじゅうご" },
             { q: "9 × 6", a: 54, q_read: "くろく",   a_read: "ごじゅうし" },
             { q: "9 × 7", a: 63, q_read: "くしち",   a_read: "ろくじゅうさん" },
-            { q: "9 × 8", a: 72, q_read: "くは",     a_read: "しちじゅうに" },
+            { q: "9 × 8", a: 72, q_read: "くは",     a_read: "しち　　　じゅうに" },
             { q: "9 × 9", a: 81, q_read: "くく",     a_read: "はちじゅういち" }
         ];
 
         const config = {
             appId: "81_all_random",
-            mainTitle: "九九カード",
-            title: "全８１もん・ばらばら",
+            mainTitle: "１１　かけざん（２）",
+            title: "九九カード（８１もん・ばらばら）",
             page: 34,
             problems: allProblems
         };
