--- a/1nen/09_10yori_ookii/35_10_to_ikutsu.html
+++ b/1nen/09_10yori_ookii/35_10_to_ikutsu.html
@@ -340,6 +340,8 @@
         const KEY_CLEAR = `${config.appId}:totalClear`;
         const KEY_DAILY_PREFIX = `${config.appId}:dailyClear_`;
         const KEY_HISTORY = `${config.appId}:history`;
+        const KEY_CLEAR_COUNT = `${config.appId}:clearCount`;
+        const KEY_STATUS = `${config.appId}:status`;
 
         // DOM要素取得
         const els = {
@@ -657,6 +659,8 @@
             // 合計クリア回数
             const total = parseInt(localStorage.getItem(KEY_CLEAR) || 0) + 1;
             localStorage.setItem(KEY_CLEAR, total);
+            localStorage.setItem(KEY_CLEAR_COUNT, total);
+            localStorage.setItem(KEY_STATUS, stars);
 
             // 本日クリア回数
             const todayKey = KEY_DAILY_PREFIX + new Date().toLocaleDateString('ja-JP');
