--- a/1nen/19_nanji_nanpun/113_nanji_nanpun.html
+++ b/1nen/19_nanji_nanpun/113_nanji_nanpun.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>１９　なんじ　なんぷん</title>
+    <title>とけいを　よもう</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800&display=swap" rel="stylesheet">
     <style>
