--- a/3nen/19_kakezan_hissan2/87_2keta_kakeru_2keta.html
+++ b/3nen/19_kakezan_hissan2/87_2keta_kakeru_2keta.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>(2けた)×(2けた)の筆算 完成版</title>
+  <title>(2けた)×(2けた)の筆算</title>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800&display=swap" rel="stylesheet">
   <style>
@@ -314,6 +314,7 @@
             appId: "2keta_kakeru_2keta", // ID短縮
             mainTitle: "１９　２けたをかけるかけ算の筆算",
             title: "(2けた)×(2けた)の筆算",
+            page: 87,
             questionCount: 6,
             targetTime: 240, 
             starThresholds: { star5: 90, star4: 80, star3: 60 }
