--- a/3nen/10_omosa/122-2_omosano_keisan.html
+++ b/3nen/10_omosa/122-2_omosano_keisan.html
@@ -86,6 +86,7 @@
         appId: "122-2_omosano_keisan",
         mainTitle: "１０　重さ",
         title: "重さの計算",
+        page: 122,
         baseScore: 100,
         targetTimePerQuestion: 20,
         starThresholds: { star1: 100, star2: 120, star3: 140, star4: 160, star5: 180 },
