--- a/3nen/10_omosa/126-1_tanino_henkan.html
+++ b/3nen/10_omosa/126-1_tanino_henkan.html
@@ -86,6 +86,7 @@
         appId: "126-1_tanino_henkan",
         mainTitle: "１０　重さ",
         title: "単位のへんかん",
+        page: 126,
         baseScore: 100,
         targetTimePerQuestion: 15,
         starThresholds: { star1: 100, star2: 120, star3: 140, star4: 160, star5: 180 },
