--- a/3nen/9_amari_warizan/108_kotae_no_tashikame.html.html
+++ b/3nen/9_amari_warizan/108_kotae_no_tashikame.html.html
@@ -85,6 +85,7 @@
         appId: "108-2_kotaeno_tashikame",
         mainTitle: "９　あまりのあるわり算",
         title: "答えのたしかめ",
+        page: 107,
         baseScore: 100,
         targetTimePerQuestion: 45, // 1問あたりの目標時間（秒）
         starThresholds: { star1: 100, star2: 120, star3: 140, star4: 160, star5: 180 },
