--- a/3nen/19_kakezan_hissan2/89_3keta_kakeru_2keta.html
+++ b/3nen/19_kakezan_hissan2/89_3keta_kakeru_2keta.html
@@ -386,7 +386,7 @@
         let currentMode = 'standard'; // standard, reverse, mental
 
         const KEY_HS = `${config.appId}:hs`;
-        const KEY_CLEAR = `${config.appId}:clear`;
+        const KEY_CLEAR = `${config.appId}:clearCount`;
         const KEY_DAILY_PREFIX = `${config.appId}:daily_`;
         const KEY_HISTORY = `${config.appId}:history_v2`; 
         const KEY_RANK = `${config.appId}:rank`; 
