--- a/index.html
+++ b/index.html
@@ -255,8 +255,11 @@ function updateAppStatus(appId) {
   const starsEl = document.getElementById(`stars-${appId}`);
   const countEl = document.getElementById(`count-${appId}`);
   if (!starsEl || !countEl) return;
+// clearCount (既存アプリ) を探し、なければ clear (新アプリ) を探す
+const totalClearCount = localStorage.getItem(`${appId}:clearCount`) 
+                     || localStorage.getItem(`${appId}:clear`) 
+                     || '0';
   
-  const totalClearCount = localStorage.getItem(`${appId}:clearCount`) || '0';
   // status がなければ rank を探し、それでもなければ ― にする
   const overallStatusStars = localStorage.getItem(`${appId}:status`) 
                           || localStorage.getItem(`${appId}:rank`) 
